--- a/ourstartups.html
+++ b/ourstartups.html
@@ -510,7 +510,7 @@
          </div>
       </div>
       <div class="footer">
-  <div class="footer-div">
+  <!-- <div class="footer-div">
     <h3>About us</h3>
     <p>Crescent Innovation & Incubation Council (CIIC) has been established as a Section-8 not for profit company and will act as a “One Stop Shop – Technology Business Incubator (TBI)” for Start-ups. CIIC facilitates entrepreneurial & innovative ecosystem to all the stakeholders including the students, faculty, industry, investors and society at large.</p>
     <div class="footer-social">
@@ -519,7 +519,7 @@
         <a href=""><div class="footer-social-icon"><i style="color: #303030; font-size: 12px;" class="fa fa-linkedin"></i></div></a>
         <a href=""><div class="footer-social-icon"><i style="color: #303030; font-size: 12px;" class="fa fa-google-plus"></i></div></a>
       </div>
-  </div>
+  </div> -->
   <div class="footer-div">
     <h3 style="">Contact us</h3>
     <p style="">Crescent Innovation & Incubation Council (CIIC),<br>
