--- a/team.html
+++ b/team.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,700" rel="stylesheet">
+        
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style type="text/css">
   *{
@@ -1198,7 +1205,7 @@
 </div>
 </div>
 <div class="footer">
-  <div class="footer-div">
+  <!-- <div class="footer-div">
     <h3>About us</h3>
     <p>Crescent Innovation & Incubation Council (CIIC) has been established as a Section-8 not for profit company and will act as a “One Stop Shop – Technology Business Incubator (TBI)” for Start-ups. CIIC facilitates entrepreneurial & innovative ecosystem to all the stakeholders including the students, faculty, industry, investors and society at large.</p>
     <div class="footer-social">
@@ -1207,7 +1214,7 @@
         <a href=""><div class="footer-social-icon"><i style="color: #303030; font-size: 12px;" class="fa fa-linkedin"></i></div></a>
         <a href=""><div class="footer-social-icon"><i style="color: #303030; font-size: 12px;" class="fa fa-google-plus"></i></div></a>
       </div>
-  </div>
+  </div> -->
   <div class="footer-div">
     <h3 style=" ">Contact us</h3>
     <p style="">Crescent Innovation & Incubation Council (CIIC),<br>
