--- a/apj_innovation_centre.html
+++ b/apj_innovation_centre.html
@@ -189,7 +189,7 @@ font-size: 15px;
                </div>
                <div class="header_menunw">
                   <div class="topnavnw" id="myTopnavnw">
-                     <a href="index.html" >About</a>
+                     <a href="index.html" >About Us</a>
                      <a href="team.html">Team</a>
                      <a href="ourstartups.html">Our Startups</a>
                      <div class="dropdownnw">
