--- a/contact_temp.html
+++ b/contact_temp.html
@@ -181,7 +181,7 @@
 		
 		</div>
 		<div class="incub_first_div1">
-		<h5>Lasst Name</h5>
+		<h5>Last Name</h5>
 		<input type="text" name="fname" value="" id="txtName" pattern="[A-Za-z]+" placeholder="Please fill alphabets only" >
 		
 		</div>
