--- a/ourstartups.html
+++ b/ourstartups.html
@@ -257,9 +257,9 @@
 
   
   <div id="mySidenavshr" class="sidenavshr">
-   <a href="#" id="contact1shr"> <span class="newfb"><i class="fa fa-facebook"></i></span> </a>
+   <a href="https://www.facebook.com/CIICstartups/" id="contact1shr"> <span class="newfb"><i class="fa fa-facebook"></i></span> </a>
   <a href="#" id="aboutshr">   <span class="newfb"><i class="fa fa-twitter"></i></span>  </a>
-  <a href="#" id="blogshr"><span class="newfb"><i class="fa fa-linkedin"></i></span> </a>
+  <a href="https://www.linkedin.com/company/ciicstartups/?originalSubdomain=in" id="blogshr"><span class="newfb"><i class="fa fa-linkedin"></i></span> </a>
   <a href="#" id="projectsshr"> <span class="newfb"><i class="fa fa-instagram"></i></span> </a>
   
 
@@ -315,7 +315,7 @@
                </div>
                <div class="header_menunw">
                   <div class="topnavnw" id="myTopnavnw">
-                     <a href="index.html" class="active">About</a>
+                     <a href="index.html" class="active">About Us</a>
                      <a href="team.html">Team</a>
                      <a href="#">Our Startups</a>
                      <div class="dropdownnw">
@@ -349,7 +349,7 @@
                <div class="herosectionnw_left">
                   <h3>startup is our heart</h3>
                </div>
-               <div class="herosectionnw_right">
+               <!-- <div class="herosectionnw_right">
                   <div class="update_group_combined">
                      <div class="update_group">
                         <div class="update_group_video">
@@ -402,7 +402,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
             </div>
          </div>
          <style type="text/css">
@@ -419,7 +419,7 @@
                 <div style="padding:20px;margin: 0;background-color: #efefef;border-radius: 10px;box-shadow: 0px 0px 10px 5px #d1d1d1;">
                 <div style="width: 100%;background-color: #fff;border-radius: 10px;box-shadow: 0px 0px 10px 5px #fff;">
                   <div style="width:20%;height: 1225px;float:left;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
-                    <h4 style="font-size: 20px; font-weight:900; color: #666666">External Startup</h4>
+                    <h4 style="font-size: 20px; font-weight:900; color: #666666">External Startups</h4>
                   </div>
                   <div style="width: 79%;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
                     <div class="startuplogo"><a href="#"><img src="images/startups/aindra systems.jpg" style="width: 135px;"></a></div>
@@ -460,7 +460,7 @@
                 <div style="padding:20px;margin: 0;background-color: #efefef;border-radius: 10px;box-shadow: 0px 0px 10px 5px #d1d1d1; margin-top: 50px;">
                 <div style="width: 100%;background-color: #fff;border-radius: 10px;box-shadow: 0px 0px 10px 5px #fff;">
                   <div style="width:20%;height: 355px;float:left;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
-                    <h4 style="font-size: 20px; font-weight:900; color: #666666">Alumni Startup</h4>
+                    <h4 style="font-size: 20px; font-weight:900; color: #666666">Alumni Startups</h4>
                   </div>
                   <div style="width: 79%;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
                     <div class="startuplogo"><a href="#"><img src="images/startups/Extreme Fire.png" style="width: 135px;"></a></div>
@@ -477,7 +477,7 @@
               <div style="padding:20px;margin: 0;background-color: #efefef;border-radius: 10px;box-shadow: 0px 0px 10px 5px #d1d1d1; margin-top: 50px;">
                 <div style="width: 100%;background-color: #fff;border-radius: 10px;box-shadow: 0px 0px 10px 5px #fff;">
                   <div style="width:20%;height: 880px;float:left;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
-                    <h4 style="font-size: 20px; font-weight:900; color: #666666">Student Startup</h4>
+                    <h4 style="font-size: 20px; font-weight:900; color: #666666">Student Startups</h4>
                   </div>
                   <div style="width: 79%;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
                     <div class="startuplogo"><a href="#"><img src="images/startups/teamalpha.png" style="width: 135px;"></a></div>
@@ -501,6 +501,18 @@
                     <div class="startuplogo"><a href="#"><img src="images/startups/teamcrescent.png" style="width: 135px;"></a></div>
                     <div class="startuplogo"><a href="#"><img src="images/startups/wgs.png" style="width: 135px;"></a></div>
                     <div class="startuplogo"><a href="#"><img src="images/startups/wings.png" style="width: 135px;"></a></div>
+                  </div>
+                </div>
+              </div>
+              <div style="padding:20px;margin: 0;background-color: #efefef;border-radius: 10px;box-shadow: 0px 0px 10px 5px #d1d1d1; margin-top: 50px;">
+                <div style="width: 100%;background-color: #fff;border-radius: 10px;box-shadow: 0px 0px 10px 5px #fff;">
+                  <div style="width:20%;height: 180px;float:left;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
+                    <h4 style="font-size: 20px; font-weight:900; color: #666666">Faculty Startups</h4>
+                  </div>
+                  <div style="width: 79%;display: flex;flex-wrap: wrap;justify-content: center;align-content: center;">
+                    <div class="startuplogo"><a href="#"><img src="images/startups/getmythcode.JPG" style="width: 135px;"></a></div>
+                    <div class="startuplogo"><a href="#"><img src="images/startups/suzaris.JPG" style="width: 135px;"></a></div>
+                    <div class="startuplogo"><a href="#"><img src="images/startups/teach.JPG" style="width: 135px;"></a></div>
                   </div>
                 </div>
               </div>
@@ -531,16 +543,47 @@ website: www.ciic.ventures<br>
 Landline: 044 - 22759200; EXTN: 485 & 486</p>
   </div>
   <div class="footer-div">
-    <h3 style="">Events & Media</h3>
-    <div class="events-pics">
-      <a href="#"><img src="images/footer1.jpg"></a>
-
-      <a href="#"><img src="images/footer2.jpg"></a>
-      <a href="#"><img src="images/footer3.jpg"></a>
-      <a href="#"><img src="images/footer4.jpg"></a>
-      <a href="#"><img src="images/footer5.jpg"></a>
-      <a href="#"><img src="images/footer6.jpg"></a>
+    <h3 style=""></h3>
+    <div style=" background-color: #fff;width: 350px;height: 220px;" class="container123">
+      <img style="width: 100%" src="images/logo.png">
+      <button class="btn" id="myBtnnw"><i class="fa fa-play-circle"></i></button>
     </div>
+  </div>
+  <div class="footer-div">
+    <div class="update_group_news" style="width: 350px;height: 220px;margin-top: 20px;color: #000">
+                           <div class="slideshow-containernw" style="height:100%;">
+                              <div class="mySlidesnw">
+                                 <div class="mySlidesnw_textnw">
+                                    <h4><i class="fa fa-caret-right"></i> News Updates</h4>
+                                    <h6>May 21,2020</h6>
+                                    <p>online class and online test schedule of CIIC</p>
+                                 </div>
+                              </div>
+                              <div class="mySlidesnw">
+                                 <div class="mySlidesnw_textnw">
+                                    <h4><i class="fa fa-caret-right"></i> News Updates</h4>
+                                    <h6>June 22,2020</h6>
+                                    <p>workshop by vistaconvert</p>
+                                 </div>
+                              </div>
+                              <div class="mySlidesnw">
+                                 <div class="mySlidesnw_textnw">
+                                    <h4><i class="fa fa-caret-right"></i> News Updates</h4>
+                                    <h6>July 21,2020</h6>
+                                    <p>online class and online test schedule of CIIC</p>
+                                 </div>
+                              </div>
+                              <div class="arrrow_nw_clknw">
+                                 <a class="prevnw" onclick="plusSlides(-1)">❮</a>
+                                 <a class="nextnw" onclick="plusSlides(1)">❯</a>
+                              </div>
+                           </div>
+                           <div class="dotnw-container">
+                              <span class="dotnw" onclick="currentSlide(1)"></span> 
+                              <span class="dotnw" onclick="currentSlide(2)"></span> 
+                              <span class="dotnw" onclick="currentSlide(3)"></span> 
+                           </div>
+                        </div>
   </div>
 
 </div>
